crates/lingui_macro/tests/snapshots/lingui_directive__define_message_explicit_context_overrides_directive.snap
---
source: crates/lingui_macro/tests/lingui_directive.rs
---
import { defineMessage } from '@lingui/core/macro';
/* lingui-set context="directive ctx" comment="directive cmt" */
const msg = defineMessage({ message: "Hello", context: "explicit ctx" })

↓ ↓ ↓ ↓ ↓ ↓

/* lingui-set context="directive ctx" comment="directive cmt" */ const msg = /*i18n*/ {
    id: "Mxe6B4",
    message: "Hello",
    context: "explicit ctx",
    comment: "directive cmt"
};
