crates/lingui_macro/tests/snapshots/lingui_directive__define_message_tagged_template_with_directive.snap
---
source: crates/lingui_macro/tests/lingui_directive.rs
---
import { defineMessage } from '@lingui/core/macro';
/* lingui-set context="my context" comment="note" */
const msg = defineMessage`Hello`

↓ ↓ ↓ ↓ ↓ ↓

/* lingui-set context="my context" comment="note" */ const msg = /*i18n*/ {
    id: "WMU_Op",
    message: "Hello",
    comment: "note",
    context: "my context"
};
