crates/lingui_macro/tests/snapshots/lingui_directive__define_message_with_directive_context.snap
---
source: tests/lingui_directive.rs
---
import { defineMessage } from '@lingui/core/macro';
/* lingui-set context="my context" */
const msg = defineMessage({ message: "Hello" })

↓ ↓ ↓ ↓ ↓ ↓

/* lingui-set context="my context" */ const msg = /*i18n*/ {
    id: "WMU_Op",
    message: "Hello",
    context: "my context"
};
