crates/lingui_macro/tests/snapshots/lingui_directive__js_select_with_directive_context.snap
---
source: crates/lingui_macro/tests/lingui_directive.rs
---
import { select } from "@lingui/core/macro";
/* lingui-set context="my context" */
const msg = select(gender, { male: "he", female: "she", other: "they" })

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
/* lingui-set context="my context" */ const msg = $_i18n._(/*i18n*/ {
    id: "-JBa2B",
    message: "{gender, select, male {he} female {she} other {they}}",
    values: {
        gender: gender
    },
    context: "my context"
});
